Courst cases and epfo apis compleated
