# routes/api.route.js
@@ -43,7 +43,7 @@ router.delete("/PropertyImage/delete/:id",authorization,PropertyImageController.
 const TenantDocumentDocumentController          =  require('../controllers/TenantDocument.js')
 // router.post("/TenantDocument/create",authorization, TenantDocumentDocumentController.create)
 router.get("/TenantDocument/list",authorization,TenantDocumentDocumentController.list)
-router.get("/TenantDocument/verify/:id/:number",authorization,TenantDocumentDocumentController.Verify)
+router.get("/TenantDocument/verify/:id",authorization,TenantDocumentDocumentController.Verify)
 // router.get("/TenantDocument/view/:id",authorization,TenantDocumentDocumentController.view)
 // router.patch("/TenantDocument/update/:id",authorization,TenantDocumentDocumentController.update)
 router.delete("/TenantDocument/delete/:id",authorization,TenantDocumentDocumentController.remove)
